# habanero-upc

./: Makefile.am  README  README.md  clobber.sh  configure.ac  index.html  install.sh  overview.html  programming.html
inc/: hcpp-utils.h  hcupc_spmd-asyncAwait.h  hcupc_spmd-atomics.h  hcupc_spmd-commTask.h  hcupc_spmd-dddf.h  hcupc_spmd-distributed-promise.h  hcupc_spmd-internal.h  hcupc_spmd-main.h  hcupc_spmd-random.h  hcupc_spmd-runtime-interface.h  hcupc_spmd-util.h  hcupc_spmd.h  hcupc_spmd.mak  hcupc_spmd_common_methods.h
inc/hclib/: hcupc_spmd.mak
inc/hclib-distws/: hcupc_spmd.mak
inc/hcpp/: hcupc_spmd.mak
inc/hcpp-distws/: hcupc_spmd.mak
machine-configs/: mach-hcupc-commMaster-10w.cfg  mach-hcupc-commMaster-11w.cfg  mach-hcupc-commMaster-12w.cfg  mach-hcupc-commMaster-13w.cfg  mach-hcupc-commMaster-14w.cfg  mach-hcupc-commMaster-15w.cfg  mach-hcupc-commMaster-16w.cfg  mach-hcupc-commMaster-17w.cfg  mach-hcupc-commMaster-18w.cfg  mach-hcupc-commMaster-19w.cfg  mach-hcupc-commMaster-20w.cfg  mach-hcupc-commMaster-21w.cfg  mach-hcupc-commMaster-22w.cfg  mach-hcupc-commMaster-23w.cfg  mach-hcupc-commMaster-24w.cfg  mach-hcupc-commMaster-2w.cfg  mach-hcupc-commMaster-3w.cfg  mach-hcupc-commMaster-4w.cfg  mach-hcupc-commMaster-5w.cfg  mach-hcupc-commMaster-6w.cfg  mach-hcupc-commMaster-7w.cfg  mach-hcupc-commMaster-8w.cfg  mach-hcupc-commMaster-9w.cfg
others/hclib/hcupc/: .cproject  .project  INSTALL  LICENSE  Makefile.am  README  configure.ac  hclib.dox  install.sh
others/hclib/hcupc/inc/: accumulator.h  ddf.h  hclib-dist.h  hclib-internal.h  hclib.h  phased.h
others/hclib/hcupc/src/: Makefile.am  accumulator.c  ddf.c  forasync.c  hclib.c  runtime-callback.c  runtime-hclib.c
others/hclib/hcupc/src/inc/: hc_sysdep.h  rt-accumulator.h  rt-ddf.h  rt-hclib-def.h  runtime-callback.h  runtime-hclib.h  runtime-support.h
others/hclib/hcupc/src/ocr/: Makefile.inc  runtime-ocr.c  runtime-ocr.c.orig
others/ocr/hcupc/: .cproject  .project  Makefile.am  build.sh  configure.ac  difs  install.sh
others/ocr/hcupc/inc/: ocr-edt.h
others/ocr/hcupc/src/: Makefile.am  Makefile.am.orig
others/ocr/hcupc/src/allocator/tlsf/: tlsf-allocator.c
others/ocr/hcupc/src/api/: ocr-edt.c
others/ocr/hcupc/src/datablock/regular/: regular-datablock.c
others/ocr/hcupc/src/driver/: ocr-driver.c
others/ocr/hcupc/src/event/hc/: hc-event.c
others/ocr/hcupc/src/inc/: debug.h.orig  ocr-policy-domain.h  ocr-task.h  ocr-worker.h
others/ocr/hcupc/src/machine-description/: ocr-machine-description.c
others/ocr/hcupc/src/policy-domain/: Makefile.inc  policy-domain-all.h
others/ocr/hcupc/src/policy-domain/fsim/: fsim-policy.c
others/ocr/hcupc/src/policy-domain/hc/: hc-dist-policy.c  hc-dist-policy.h  hc-policy-ext.h  hc-policy.c  hc-policy.h
others/ocr/hcupc/src/scheduler/: Makefile.inc  scheduler-all.h
others/ocr/hcupc/src/scheduler/fsim/: fsim-scheduler.c
others/ocr/hcupc/src/scheduler/hc/: hc-comm-scheduler.c  hc-comm-scheduler.h  hc-scheduler.c  hc-scheduler.h
others/ocr/hcupc/src/task/fsim/: fsim-task.c  ocr-task-event-fsim.c
others/ocr/hcupc/src/task/hc/: hc-task.c
others/ocr/hcupc/src/worker/: Makefile.inc  worker-all.h
others/ocr/hcupc/src/worker/fsim/: fsim-worker.c
others/ocr/hcupc/src/worker/hc/: hc-worker.c  (+4 more)
others/ocr/hcupc/src/workpile/: workpile-all.h
scripts/: edison.sh  gen-generic-asyncAwait.pl  job.timedrun  max.davinci.setup.sh  max.macbook.setup.sh  max.setup.sh  setMeFirst.csh  setMeFirst.sh  setup.sh  timedrun
src/: Makefile.am  Makefile.edison  Makefile.upcxx  hcpp-runtime.cpp  hcupc_spmd-distHPT.cpp  hcupc_spmd-distributed-promise.cpp  hcupc_spmd-semiConcDeque.cpp  hcupc_spmd.cpp  hcupc_spmd_dddf.cpp  hcupc_spmd_distWS.cpp  hcupc_spmd_distWS_baseline.cpp  hcupc_spmd_distWS_common.cpp  hcupc_spmd_stats.cpp
test/dddf/smithwaterman/: Makefile  edison.job-places-8  run.sh  smith-waterman.cpp
test/distWS/nbody/: 8192_inp.h  Makefile  forasyncAny1D.h  gen-input.cpp  nbody.cpp
test/distWS/nqueens/: Makefile  nqueens  nqueens.cpp
test/distWS/standatd_uts/perarnau_ipdps14/: Makefile  README.markdown  config.in  mpi.places-128  mpi.places-256  mpi.places-512  mpi.places-64  mpi_coords.c  mpi_workstealing.c  mpi_wshalf.c  uts_dm.c  uts_dm.h  victimselect.h
test/distWS/standatd_uts/perarnau_ipdps14/config/: kei
test/distWS/standatd_uts/uts_upc/: .t1  Makefile  config.in  slurm-job.sh
test/distWS/standatd_uts/uts_upcxx/: uts_upc_enhanced.c
test/distWS/uts/: Makefile  UTS  UTS.cpp  timeline.places-512  uts.c  uts.h
test/hcpp/misc/: Makefile.edison  asyncAwait0.cpp  fib-ddt.cpp  fib.cpp
test/hcupc_spmd/lulesh/: Makefile  lulesh-comm-upcxx.cc  lulesh-viz.cc  lulesh.cc  lulesh.h
test/hcupc_spmd/misc/: Makefile  test.cpp  test_ddf.cpp
test/hcupc_spmd/samplesort/: Makefile  sample_sort.cpp
test/hpgmg/: REAME.hupcpp
test/hpgmg/scripts/: hupcpp.patch  omp_to_hcupc.py
test/hpgmg/scripts/pbbs_edison/: job.places-128.2p  job.places-256.2p  job.places-512.2p  job.places-64.2p
test/lulesh/: Makefile  lulesh-comm-upcxx.cc  lulesh-comm.cc  lulesh-init.cc  lulesh-util.cc  lulesh.cc  lulesh.h
test/lulesh/nersc/: job.pbbs.n1  job.pbbs.n216  job.pbbs.n512  job.pbbs.n64  job.pbbs.n8
test/misc/: Makefile  arrayadd1d.cpp  test.cpp  test2.cpp  test_ddf.cpp  test_promise.cpp
test/promises/smithwaterman/: Makefile  edison.job-places-8  run.sh  smith-waterman.cpp
test/samplesort/: Makefile  sample_sort.cpp
test/topology_edison/: Makefile  simulated.coords  topo.cpp
test/upcxx/lulesh/: Makefile  README  lulesh-comm-upcxx.cc  lulesh.cc  lulesh.h
test/upcxx/lulesh/nersc/: job.pbbs.n1  job.pbbs.n1.noonp  job.pbbs.n1728  job.pbbs.n216  job.pbbs.n216.noonp  job.pbbs.n4096  job.pbbs.n512  job.pbbs.n512.noonp  job.pbbs.n5832  job.pbbs.n64  job.pbbs.n64.noonp  job.pbbs.n8  job.pbbs.n8.noonp
test/upcxx/samplesort/: Makefile  sample_sort.cpp
test/upcxx/samplesort/pbbs/: job.pbbs.n12x1  job.pbbs.n12x12  job.pbbs.n12x192  job.pbbs.n12x24  job.pbbs.n12x300  job.pbbs.n12x4  job.pbbs.n12x48  job.pbbs.n12x512  job.pbbs.n12x8  job.pbbs.n12x96
(+4 files in other folders)
